# Python-URes-Visual

./: .coverage  .pre-commit-config.yaml  .releaserc  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: create_release_blog.yaml  gh-page.yaml  publish.yaml  test.yaml
tests/backend/: README-Test.md  conftest.py  test_plot_backend.py
ures_visual/: __init__.py  ml.py
ures_visual/backend/: __init__.py  core.py  deps.py  interactive.py  research.py
