[project]
name = "ures-visual"
version = "0.1.0"
description = "A comprehensive, multi-backend visualization library designed for scientific research, data analysis, and machine learning, built on Polars DataFrames with matplotlib/seaborn, plotly, and HoloViews backends."
authors = [
    {name = "stone",email = "github@stone-bo.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars (>=1.32.2,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "numpy (>=2.2,<2.3)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "kaleido (>=1.0.0,<2.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "holoviews (>=1.21.0,<2.0.0)",
    "bokeh (>=3.7.3,<4.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pre-commit = "^4.3.0"
pytest-time = "^0.4.1"
pytest-xdist = "^3.8.0"
rich = "^14.1.0"
